--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Welcome to Vue</title>
-  <script src="https://unpkg.com/vue"></script>
+  <script src="https://cdn.bootcss.com/require.js/2.3.5/require.js"></script>
 </head>
 <body>
   <div id="app">
@@ -29,7 +29,15 @@
       </li>
     </ul>
   </div>
-
-  <script src="app.js"> </script>
+  <script>
+    require.config({
+        paths:{
+            "vue": "https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue"
+        }
+    })
+    require(["vue","app"],function(vue,app){
+        console.log("module loaded");
+    });
+  </script>
 </body>
 </html>
