--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Welcome to Vue</title>
-  <script src="https://cdn.bootcss.com/require.js/2.3.5/require.js"></script>
 </head>
 <body>
   <div id="app">
@@ -29,15 +28,6 @@
       </li>
     </ul>
   </div>
-  <script>
-    require.config({
-        paths:{
-            "vue": "https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue"
-        }
-    })
-    require(["vue","app"],function(vue,app){
-        console.log("module loaded");
-    });
-  </script>
+  <script src="app.bundle.js"> </script>
 </body>
 </html>
