feat 添加 TodoItemDetail.vue 组件

--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>Vue ToDo Demo</title>
-
+  <style>
+    html, body{
+      height: 100%;
+      background: #222222;
+    }
+    #app-wrapper{
+      max-width: 1080px;
+      min-width: 640px;
+      width: 720px;
+      margin: 0px auto;
+      height: 100%;
+      background: #ffffff;
+    }
+  </style>
 </head>
 <body>
+  <div id="app-wrapper">
   <div id="app">
 
+  </div>
   </div>
   <script src="app.bundle.js"> </script>
 </body>
